--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -25,5 +27,17 @@
     "react-router-dom": "6.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "eslint": "8.15.0",
+    "eslint-config-next": "^13.1.6",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.8"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "npx organize-imports-cli",
+      "prettier --write ."
+    ]
   }
 }
