--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.14.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@types/video-react": "^0.15.1",
     "eslint": "8.15.0",
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.3",
