--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "emotion-reset": "^3.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.14.0",
-    "tailwindcss": "3.3.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
     "video-react": "^0.16.0"
   },
@@ -34,7 +38,8 @@
     "eslint": "8.15.0",
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.3",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
