--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "emotion-reset": "^3.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "gsap": "^3.12.2",
     "next": "13.4.6",
     "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "6.14.0",
+    "react-scrollama": "^2.3.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
