--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "^10.4.14",
+    "dayjs": "^1.11.9",
     "emotion-reset": "^3.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
