--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
     "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.9",
-    "emotion-reset": "^3.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gsap": "^3.12.2",
@@ -31,14 +27,11 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "6.14.0",
-    "react-scrollama": "^2.3.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.1.3",
-    "video-react": "^0.16.0"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/video-react": "^0.15.1",
     "eslint": "8.15.0",
     "eslint-config-next": "^13.1.6",
     "husky": "^8.0.3",
