--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.9",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
