--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix"
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix",
+    "typesafe-i18n": "typesafe-i18n"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -30,6 +31,7 @@
     "react-router-dom": "6.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
+    "typesafe-i18n": "^5.24.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
