--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "6.14.0",
+    "react-use": "^17.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
     "typesafe-i18n": "^5.24.3",
