--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "add-to-calendar-button-react": "^2.2.8",
     "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.9",
     "eslint": "8.43.0",
