--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "6.14.0",
+    "react-starfield-animation": "^1.0.1",
     "react-use": "^17.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
