--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.4.6",
     "gsap": "^3.12.2",
     "next": "13.4.6",
+    "next-seo": "^6.1.0",
     "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
