--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@next/font": "^13.4.12",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.1",
@@ -28,7 +29,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gsap": "^3.12.2",
-    "next": "13.2.4",
+    "next": "13.1.4",
     "next-seo": "^6.1.0",
     "postcss": "^8.4.25",
     "react": "18.2.0",
