--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix",
-    "typesafe-i18n": "typesafe-i18n"
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.13.0",
@@ -29,12 +28,15 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gsap": "^3.12.2",
+    "i18next": "^23.4.1",
     "next": "13.1.4",
+    "next-i18next": "^14.0.0",
     "next-seo": "^6.1.0",
     "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "6.14.0",
@@ -42,7 +44,6 @@
     "react-use": "^17.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
-    "typesafe-i18n": "^5.24.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
