--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "6.14.0",
     "react-starfield-animation": "^1.0.1",
     "react-use": "^17.4.0",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
