--- a/apps/gophercon-korea-web-24/package.json
+++ b/apps/gophercon-korea-web-24/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "gophercon-common": "0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
