--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "license": "MIT",
-  "workspaces": {
-    "packages": [
-      "packages/*",
-      "apps/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
     "web23": "yarn workspace gophercon-korea-web-23",
     "web24": "yarn workspace gophercon-korea-web-24",
@@ -18,7 +16,13 @@
     "eslint": "8.15.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "styled-components": "^6.1.11",
+    "styled-reset": "^4.5.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
