--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   ],
   "scripts": {
     "web23": "yarn workspace gophercon-korea-web-23",
-    "web24": "yarn workspace gophercon-korea-web-24",
-    "prepare": "husky install"
+    "web24": "yarn workspace gophercon-korea-web-24"
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "styled-components": "^6.1.11",
-    "styled-reset": "^4.5.2"
+    "@emotion/css": "^11.13.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "emotion-reset": "^3.0.1",
+    "react": "^18.3.1"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
