--- a/apps/gophercon-korea-web-23/package.json
+++ b/apps/gophercon-korea-web-23/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gophercon-korea-2023",
+  "name": "gophercon-korea-web-23",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -41,6 +41,7 @@
     "react-router-dom": "6.26.1",
     "react-starfield-animation": "^1.0.1",
     "react-use": "^17.5.1",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
