--- a/apps/gophercon-korea-web-24/package.json
+++ b/apps/gophercon-korea-web-24/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gophercon-common": "0.1.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18",
-    "gophercon-common": "0.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^22",
