--- a/apps/gophercon-korea-web-24/package.json
+++ b/apps/gophercon-korea-web-24/package.json
@@ -12,12 +12,14 @@
     "gophercon-common": "0.1.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
   }
