--- a/apps/gophercon-korea-web-24/package.json
+++ b/apps/gophercon-korea-web-24/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
   }
