--- a/apps/gophercon-korea-web-24/tsconfig.json
+++ b/apps/gophercon-korea-web-24/tsconfig.json
@@ -22,6 +22,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@/assets/*": ["./src/assets/*"],
       "@/components/*": ["./src/components/*"]
     }
   },
