--- a/apps/gophercon-korea-web-24/package.json
+++ b/apps/gophercon-korea-web-24/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
