--- a/packages/gophercon-common/package.json
+++ b/packages/gophercon-common/package.json
@@ -2,19 +2,23 @@
   "name": "gophercon-common",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "echo 'build script not implemented yet'"
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "emotion-reset": "^3.0.1"
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "@emotion/react": "^11.13.3"
+    "@emotion/react": "^11.13.3",
+    "@types/react": "^18.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
     "typescript": "^5.5.4"
   }
 }
