--- a/packages/gophercon-common/package.json
+++ b/packages/gophercon-common/package.json
@@ -15,7 +15,10 @@
   },
   "peerDependencies": {
     "react": "^18.3.1",
+    "next": "14.2.6",
     "@emotion/react": "^11.13.3",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/styled": "^11.13.0",
     "@types/react": "^18.3.3"
   },
   "devDependencies": {
